--- a/src/index.css
+++ b/src/index.css
@@ -121,9 +121,8 @@ button {
   text-align: center;
   margin-bottom: var(--space-16);
   position: relative;
-  display: inline-block;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
+  width: 100%;
 }
 
 .section-title::after {
